[package]
name = "bvhtracer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
rand = "0.8.5"
rand_isaac = "0.3.0"
glfw = "0.45.0"
stb_image = "0.2.4"

[dependencies.cglinalg]
git = "https://github.com/lambdaxymox/cglinalg/"
version = "0.16.1"

[dependencies.num-traits]
version = "0.2.15"
default-features = false
features = ["libm"]

[dependencies.tri_loader]
path = "tri_loader"

[dependencies.tiled_array]
path = "tiled_array"

[build-dependencies]
gl_generator = "0.14.0"

[dev-dependencies]
criterion = "0.3.5"


[[bench]]
name = "bench_aabb_intersection"
harness = false

[[bench]]
name = "bench_triangle_intersection"
harness = false

[[bench]]
name = "bench_bvh_intersection"
harness = false

[[bench]]
name = "bench_bvh_build"
harness = false

[[bench]]
name = "bench_bvh_refit_rebuild"
harness = false

