[package]
name = "examples"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies.bvhtracer]
path = "../bvhtracer"

[dependencies.bvhtracer_demos]
path = "../bvhtracer_demos"

[dependencies.cglinalg]
git = "https://github.com/lambdaxymox/cglinalg/"
version = "0.16.1"


[[example]]
name = "trippy_teapots"
path = "trippy_teapots.rs"

[[example]]
name = "two_armadillos"
path = "two_armadillos.rs"

[[example]]
name = "sixteen_armadillos"
path = "sixteen_armadillos.rs"

[[example]]
name = "quad"
path = "quad.rs"

[[example]]
name = "cube"
path = "cube.rs"

[[example]]
name = "big_ben_clock"
path = "big_ben_clock.rs"

